--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,11 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+  overflow-x: hidden;
 }
 
 * {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
 }
+
+@import './styles/scrollbar.css';
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
